test/fail/issue2062.mo
func fac(n : Nat) : Nat {
  if (n == 0) return
  return 1;
};
